corrected alignment on form, corrected rating and date alignment on bookbox

--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -8,7 +8,6 @@ h1 { font-size: 1.5em; margin: 10px; } */
 
 .rating, .favorite { 
   border: none;
-  float: left;
 }
 
 .rating > input, .favorite > input { display: none; } 
